fix: visual, change primary color

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -16,7 +16,7 @@
 // 1. Global
 // ---------
 
-$primary-color: #2199e8;
+$primary-color: #ed008c;
 $secondary-color: #777777;
 $success-color: #3adb76;
 $warning-color: #ffae00;
