--- a/src/styles/template/_newsletter.scss
+++ b/src/styles/template/_newsletter.scss
@@ -1,5 +1,10 @@
-// FIX for bug in react-inky callouts
+// FIX: original CSS breaks callouts view.
+center {
+  width: 100%;
+  min-width: inherit;
+}
 
+// FIX for bug in react-inky callouts
 table.callout {
   margin-bottom: $callout-margin-bottom;
   Margin-bottom: $callout-margin-bottom;
@@ -28,4 +33,8 @@ table.callout {
     border: $callout-border-warning;
     color: $white;
   }
+}
+
+.full-bleed-wrapper-2 img {
+  max-width: 100%
 }
